--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </div>
     <div class="terminos">
-      <input type="checkbox" name="acepto" id="aceptar">
+      <input type="checkbox" name="acepto" id="aceptar"  required>
       <label for="aceptar">Acepto los términos y condiciones</label>
     </div>
     <div class="line"></div>
