--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
   <p class="texto-feedBack">¿Cómo te sentiste con el soporte de Federico?</p>
     <div class="ul">
       <ul>
-        <li><input type="radio" name="satisfaccion" id="1" class="radio">
+        <li><input required type="radio" name="satisfaccion" id="1" class="radio">
         <label for="1">1</label></li>
-        <li><input type="radio" name="satisfaccion" id="2" class="radio"><label for="2">2</label></li>
-        <li><input type="radio" name="satisfaccion" id="3" class="radio"><label for="3">3</label></li>
-        <li><input type="radio" name="satisfaccion" id="4" class="radio"><label for="4">4</label></li>
-        <li><input type="radio" name="satisfaccion" id="5" class="radio"><label for="5">5</label></li>
+        <li><input required type="radio" name="satisfaccion" id="2" class="radio"><label for="2">2</label></li>
+        <li><input required type="radio" name="satisfaccion" id="3" class="radio"><label for="3">3</label></li>
+        <li><input required type="radio" name="satisfaccion" id="4" class="radio"><label for="4">4</label></li>
+        <li><input required type="radio" name="satisfaccion" id="5" class="radio"><label for="5">5</label></li>
       </ul>
       <div class="texto-ul">
         <p class="p2">Bastante
@@ -63,7 +63,8 @@
       <label for="aceptar">Acepto los términos y condiciones</label>
     </div>
     <div class="line"></div>
-      <button class="btnEnviar">SIGUIENTE</button>
+    <button type="submit" class="btnEnviar">SIGUIENTE</button>
+  
 </div>
 
     <script src="./js/main.js"></script>
